syntax = "proto3";

package protos;
option go_package = "orch-go/gen/protos;protos";
option csharp_namespace = "Core";



import "custom_types.proto";
import "google/protobuf/empty.proto";
import "customer.proto";

service CustomerAddressService {
  rpc GetAll (GetAllRequest) returns (GetAllCustomerAddressesResponse);
  rpc GetById (GetCustomerAddressByIdRequest) returns (CustomerAddressModel);
  rpc GetByIds (GetCustomerAddressByIdsRequest) returns (GetAllCustomerAddressesResponse);
  rpc Add (AddCustomerAddressRequest) returns (CustomerAddressModel);
  rpc Update (UpdateCustomerAddressRequest) returns (google.protobuf.Empty);
  rpc Delete (DeleteCustomerAddressRequest) returns (google.protobuf.Empty);
  rpc AddBulk (AddCustomerAddressBulkRequest) returns (google.protobuf.Empty);
  rpc UpdateBulk (UpdateCustomerAddressBulkRequest) returns (google.protobuf.Empty);
  rpc DeleteBulk (DeleteCustomerAddressBulkRequest) returns (google.protobuf.Empty);
}

message CustomerAddressModel {
  int32 address_id = 1;
  optional int32 customer_id = 2;
  optional string country = 3;
  optional string city = 4;
  optional string street = 5;
  optional string zip_code = 6;
  optional bool is_primary = 7;
}

message GetAllCustomerAddressesResponse {
  repeated CustomerAddressModel customer_addresses = 1;
}

message GetCustomerAddressByIdRequest {
  int32 address_id = 1;
}

message GetCustomerAddressByIdsRequest {
  repeated int32 address_ids = 1;
}

message AddCustomerAddressRequest {
  optional int32 customer_id = 1;
  optional string country = 2;
  optional string city = 3;
  optional string street = 4;
  optional string zip_code = 5;
  optional bool is_primary = 6;
}

message AddCustomerAddressBulkRequest {
  repeated AddCustomerAddressRequest customer_addresses = 1;
}

message UpdateCustomerAddressRequest {
  int32 address_id = 1;
  optional int32 customer_id = 2;
  optional string country = 3;
  optional string city = 4;
  optional string street = 5;
  optional string zip_code = 6;
  optional bool is_primary = 7;
}

message UpdateCustomerAddressBulkRequest {
  repeated UpdateCustomerAddressRequest customer_addresses = 1;
}

message DeleteCustomerAddressRequest {
  int32 address_id = 1;
}

message DeleteCustomerAddressBulkRequest {
  repeated DeleteCustomerAddressRequest customer_addresses = 1;
}

